# polymer_element

./: .gitignore  BUILD  BUILD.gn  README.md  bower.json  build.dart  package-lock.json  package.json  pubspec.yaml  tsconfig.json
lib/: annotations.dart  annotations.ts  dart_callbacks_behavior.dart  dart_callbacks_behavior.ts  init.dart  iron_flex_layout.dart  iron_icon.dart  iron_icons.dart  iron_input.dart  loader.dart  metadata_registry.dart  metadata_registry.ts  module.dart  module.ts  module_helper.js  native_import.html  native_import.js  native_polymerize.dart  observe.dart  observe.polymerize.dart  observe.ts  observe_support.html  observe_support.js  package.json  paper_button.dart  paper_checkbox.dart  paper_dialog.dart  paper_icon_button.dart  paper_input.dart  paper_material.dart  polymer-redux.html  polymer_element.dart  polymer_element.polymerize.dart  polymer_element.ts  polymerize.dart  polymerize.html  polymerize.js  polymerize_js.dart  polymerize_js.html  polymerize_js.polymerize.dart  (+17 more)
lib/src/: polymerize.js
lib/src/custom-elements/: .bower.json
lib/src/iron-a11y-announcer/: .bower.json
lib/src/iron-a11y-keys-behavior/: .bower.json
lib/src/iron-autogrow-textarea/: .bower.json
lib/src/iron-behaviors/: .bower.json
lib/src/iron-checked-element-behavior/: .bower.json
lib/src/iron-fit-behavior/: .bower.json
lib/src/iron-flex-layout/: .bower.json
lib/src/iron-icon/: .bower.json
lib/src/iron-icons/: .bower.json
lib/src/iron-iconset-svg/: .bower.json
lib/src/iron-input/: .bower.json
lib/src/iron-meta/: .bower.json
(+28 files in other folders)
