#Build "polymer_element"
load('@polymerize//:polymerize.bzl', 'polymer_library')

package(default_visibility=['//visibility:public'])

#filegroup(name = "polymer_element", srcs=glob(["lib/**/*.dart"]))

polymer_library(
  name = 'polymer_element',
  deps = ['@js//:js'],
  dart_sources = glob([
      'lib/module.dart',
      'lib/observe.dart',
      'lib/polymer_element.dart',
      'lib/require.dart']),
  base_path = "//:lib",
  external = 1,
  html_templates = glob(['lib/**'],exclude=['lib/**/*.dart']),
  package_name = 'polymer_element', #Cippa Lippa
  version = '0.1.0+1')


polymer_library(
  name = 'polymer_elements',
  deps = ['@js//:js'],
  dart_sources = glob(['lib/**/paper-*.dart','lib/**/iron-*.dart']),
  base_path = "//:lib",
  external = 1,
  html_templates = [],
  package_name = 'polymer_elements', #Cippa Lippa
  version = '0.1.0+1')